--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -20,8 +20,8 @@
                     <li><a href="home_page.html">Home</a></li>
                     <li><a href="resumedetail.html">Resume</a></li>
                     <li><a href="todolist.html">To-do</a></li>
-                    <li><a href="#">Folder</a></li>
-                    <li><a href="#">Project</a></li>
+                    <li><a href="path.html">Path</a></li>
+                    <li><a href="notes.html">Notes</a></li>
                 </ul>
             </div>
             <div>
@@ -44,7 +44,7 @@
                    <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/resume.png" alt="">
                </div>
                <div class="para">
-                   <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis maxime aspernatur laudantium nemo reprehenderit at veniam unde consequatur architecto, asperiores aliquid saepe mollitia, debitis error eius ex possimus reiciendis! Atque?</p>
+                   <p >Create a professional resume effortlessly by filling in your details. Our resume builder transforms your education, skills, and work experience into a polished, ready-to-use resume that you can download with just a click.</p>
                    <div class="btn" >
                        <a href="resumedetail.html">Click here</a>
                    </div>
@@ -52,13 +52,13 @@
              
             </div>
             <div class="in_res">
-                <h3 style="text-align: center; margin-top:1.2rem">To-Do List</h3>
+                <h2 style="text-align: center; margin-top:1.2rem">To-Do List</h2>
                 <div style="text-align: center;">
  
                     <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/todo.png" alt="">
                 </div>
                 <div class="para">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis maxime aspernatur laudantium nemo reprehenderit at veniam unde consequatur architecto, asperiores aliquid saepe mollitia, debitis error eius ex possimus reiciendis! Atque?</p>
+                    <p> Stay organized and boost your productivity with our dynamic to-do list. Easily add, delete, or edit tasks to manage your daily activities and track your progress. Achieve your goals, one task at a time.</p>
                     <div class="btn" >
                         <a href="todolist.html">Click here</a>
                     </div>
@@ -67,26 +67,26 @@
         </div>
         <div class="res">
             <div class="in_res">
-                <h3 style="text-align: center; margin-top:1.2rem">Resume</h3>
+                <h2 style="text-align: center; margin-top:1.2rem">Path</h2>
                <div style="text-align: center;">
 
-                   <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/welcome.avif" src="" alt="">
+                   <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/path.jfif" src="" alt="">
                </div>
                <div class="para">
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis maxime aspernatur laudantium nemo reprehenderit at veniam unde consequatur architecto, asperiores aliquid saepe mollitia, debitis error eius ex possimus reiciendis! Atque?</p>
+                   <p> Unsure of your next step? Enter your interests, and let our path creation tool guide you towards the best career or educational path tailored specifically for you. Discover new opportunities and plan for success.</p>
                    <div class="btn" >
-                    <a href="">Click here</a>
+                    <a href="path.html">Click here</a>
                 </div>
                </div>
             </div>
             <div class="in_res">
-                <h3 style="text-align: center; margin-top:1.2rem">Resume</h3>
+                <h2 style="text-align: center; margin-top:1.2rem">Resume</h2>
                 <div style="text-align: center;">
  
-                    <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/welcome.avif"  alt="">
+                    <img style="box-shadow:0px 2px 6px; height:8rem; width:10rem;" src="/notes.png"  alt="">
                 </div>
                 <div class="para">
-                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis maxime aspernatur laudantium nemo reprehenderit at veniam unde consequatur architecto, asperiores aliquid saepe mollitia, debitis error eius ex possimus reiciendis! Atque?</p>
+                    <p >Capture your thoughts, ideas, and reminders with our daily notes feature. Whether it’s a quick reminder or a detailed reflection, your notes are stored securely and are always accessible when you need them.</p>
                     <div class="btn" >
                         <a href="">Click here</a>
                     </div>
