--- a/HTML/notes.html
+++ b/HTML/notes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Path Creation Form</title>
-    <link rel="stylesheet" href="/Css/path.css">
+    <title>Add Note</title>
+    <link rel="stylesheet" href="/Css/notes.css">
 </head>
 <body>
     <nav class="navbar">
@@ -27,20 +27,11 @@
             </div>
         </div>
     </nav>
-    <h2 style="padding-top: 1rem;">Path Creation</h2>
+    <h2>ADD Your Note</h2>
     <div class="form-container">
         <form>
-            <label for="interest">Enter your interests(Seperated by commas)</label>
-            <input type="text" id="interest" name="interest" placeholder="Enter interest here">
-
-            <label for="10thscore">10th Score</label>
-            <input type="text" id="10thscore" name="10thscore" placeholder="Enter 10th score">
-
-            <label for="12thscore">12th Score</label>
-            <input type="text" id="12thscore" name="12thscore" placeholder="Enter 12th score">
-
-            <label for="gradscore">Graduation Score</label>
-            <input type="text" id="gradscore" name="gradscore" placeholder="Enter graduation score">
+            <label for="note">Add Note</label>
+            <textarea id="note" name="note" placeholder="Write your note here..."></textarea>
 
             <button type="submit" class="submit-btn">Submit</button>
         </form>
