--- a/HTML/resumedetail.html
+++ b/HTML/resumedetail.html
@@ -16,8 +16,8 @@
                 <li><a href="home_page.html">Home</a></li>
                 <li><a href="resumedetail.html">Resume</a></li>
                 <li><a href="todolist.html">To-do</a></li>
-                <li><a href="#">Folder</a></li>
-                <li><a href="#">Project</a></li>
+                <li><a href="path.html">Path</a></li>
+                <li><a href="notes.html">Notes</a></li>
             </ul>
             <div>
                 <a href="#"><img style="height:3rem; width:3rem ; border-radius:50%" src="/profile.png" alt=""></a>
